Fixed: - Home button to close to logo when version is disabled - User settings overlapped with nav bar - nav bar pretty positioning
Added:
- Hide Dashboard button setting
- Hide My List setting
- Setting to limit the amount of profiles users can create

--- a/grails-app/assets/stylesheets/_main.scss
+++ b/grails-app/assets/stylesheets/_main.scss
@@ -139,7 +139,7 @@ header.main{
 
       >a{
         color: white;
-        padding: 11px 10px;
+        padding: 1.03em 10px;
         display: block;
 
         &.active{
@@ -198,7 +198,7 @@ header.main{
 
 .dash-search{
   margin: 0;
-  padding: 8px 9px 8px 0px;
+  padding: 1.03em 9px 8px 0px;
 }
 
 
